[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/game/princess-army-cassandra-player.png" type="Texture" id=1]
[ext_resource path="res://scene/level/cassandra/Level1_Player.gd" type="Script" id=2]
[ext_resource path="res://assets/game/swordman-cassandra-enemy.png" type="Texture" id=3]
[ext_resource path="res://scene/level/cassandra/Level1_Enemy.gd" type="Script" id=4]
[ext_resource path="res://scene/level/cassandra/Level1.gd" type="Script" id=5]
[ext_resource path="res://assets/musics/Combat.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/face/Cassandra Bloodthorn Face.jpg" type="Texture" id=7]
[ext_resource path="res://assets/face/goblin.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=4]
radius = 49.0102

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 30.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 206.01

[node name="Level1" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 61, 85 )
script = ExtResource( 2 )

[node name="UICombat" type="CanvasLayer" parent="Player"]
visible = false

[node name="PlayerFace" type="TextureRect" parent="Player/UICombat"]
margin_left = 66.0
margin_top = 481.0
margin_right = 266.0
margin_bottom = 681.0
texture = ExtResource( 7 )

[node name="ArmyPowerLabel" type="Label" parent="Player/UICombat"]
margin_left = 646.0
margin_top = 534.0
margin_right = 686.0
margin_bottom = 565.0
text = "Power
"
align = 1
valign = 1

[node name="ArmyPowerBar" type="ProgressBar" parent="Player/UICombat"]
margin_left = 354.0
margin_top = 550.0
margin_right = 978.0
margin_bottom = 583.0

[node name="EnemyFace" type="TextureRect" parent="Player/UICombat"]
margin_left = 1035.0
margin_top = 483.0
margin_right = 1235.0
margin_bottom = 683.0
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="AreaEngagement" type="Area2D" parent="Player"]

[node name="PlayerEngageDetection" type="CollisionShape2D" parent="Player/AreaEngagement"]
shape = SubResource( 4 )

[node name="Enemy" type="KinematicBody2D" parent="."]
position = Vector2( 644, 224 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Enemy"]
position = Vector2( -1, 0 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2( 0, 2.5 )
shape = SubResource( 2 )

[node name="AreaDetection" type="Area2D" parent="Enemy"]
position = Vector2( 0, -2 )

[node name="CollisionDetection" type="CollisionShape2D" parent="Enemy/AreaDetection"]
position = Vector2( -1, 1 )
shape = SubResource( 3 )

[node name="Combat_BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="ready" from="Player/UICombat" to="Player" method="_on_UICombat_ready"]
[connection signal="body_entered" from="Player/AreaEngagement" to="Player" method="_on_AreaEngagement_body_entered"]
[connection signal="body_exited" from="Player/AreaEngagement" to="Player" method="_on_AreaEngagement_body_exited"]
[connection signal="body_entered" from="Enemy/AreaDetection" to="Enemy" method="_on_AreaDetection_body_entered"]
[connection signal="body_exited" from="Enemy/AreaDetection" to="Enemy" method="_on_AreaDetection_body_exited"]
